템플릿 수정

--- a/Apr/2024-04-24.md
+++ b/Apr/2024-04-24.md
@@ -3,9 +3,12 @@
 ## 날짜: YYYY-MM-DD
 
 ### 스크럼
-- 학습 목표 1 : 아침 스크럼에 작성한 내용 붙여넣기
-- 학습 목표 2
-- 학습 목표 3
+- 오늘 할 일 :
+- 특이사항   :
+- 작일 한 일 :
+- Keep       :
+- Problem    :
+- Try        :
 
 ### 새로 배운 내용
 #### 주제 1: 주제에 대한 설명
